--- a/css/plugins/bureaucracy.less
+++ b/css/plugins/bureaucracy.less
@@ -34,3 +34,19 @@
 .dokuwiki form.bureaucracy__plugin div.field {
     margin-bottom: 5px;
 }
+
+.bureaucracy-submit-btn {
+  color: #fff;
+  background-color:#2780e3;
+  border-color:#2780e3;
+  &:hover {
+    background-color:#1967be;
+    border-color:#1967be; 
+  }
+}
+
+.dokuwiki form.bureaucracy__plugin button[type="submit"] {
+  .bureaucracy-submit-btn;
+  float: right;
+  margin-top: 1rem;
+}
