--- a/css/plugins/inlinetoc.less
+++ b/css/plugins/inlinetoc.less
@@ -10,3 +10,15 @@
 .inlinetoc2 > li {
   margin-left: -10px;
 }
+
+/*Inline toc plugin overrides*/
+div .toc_inline > h3 {
+    margin-top: 0px !important;
+}
+
+div .toc_inline ul {
+    list-style-type: revert !important;
+}
+div.toc_inline>div{
+    padding-left: revert !important;
+}
