--- a/css/plugins/move.less
+++ b/css/plugins/move.less
@@ -16,3 +16,9 @@
 #plugin_move__progress li.media {
     overflow: initial !important;
 }
+
+#plugin_move__progress > div.ui-progressbar > div.ui-progressbar-value {
+    margin: 0;
+    -webkit-transition: none !important;
+    transition: none !important;
+}
