--- a/css/plugins/datatables.less
+++ b/css/plugins/datatables.less
@@ -19,3 +19,41 @@
   }
 
 }
+
+/*Manually add class for search box. Needed as box is generated after page load using js*/
+.dt-wrapper input[type="search"] {
+  /*form-control*/
+  width: auto;
+  height: 38px;
+  padding: 8px 12px;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+  -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+  transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+
+  /*Input sm*/
+  font-size: 12px;
+  height: 30px;
+  line-height: 1.5;
+  vertical-align: middle;
+}
+
+.dt-wrapper input[type="search"]:focus {
+ border-color:#66afe9;
+ outline:0;
+ -webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+ box-shadow:inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+}
+
+
+/* padding fix*/
+.table > tbody > tr > td, .table > tbody > tr > th, 
+.table > tfoot > tr > td, .table > tfoot > tr > th, 
+.table > thead > tr > td, .table > thead > tr > th {
+    padding: 7px;
+}
