--- a/css/toc.less
+++ b/css/toc.less
@@ -62,6 +62,11 @@
   margin: 0 0 1.5em 1.5em;
 }
 
+div.toc_shrinken {
+  font-size: 1.2em !important;
+  border: none !important;
+}
+
 .dw-toc-closed {
   .toc-title span,
   .toc-body         { display: none; }
@@ -77,7 +82,7 @@
 }
 
 .toc-panel .panel-heading {
-  margin-bottom: 0;
+  margin: 0;
   padding: 5px;
 }
 
@@ -89,5 +94,122 @@
     .dw-toc-closed {
       right: auto;
     }
+  }
+}
+
+/*If toc in rightsidebar*/
+
+/* hide inactive nested list */
+.toc-panel-right .nav ul.nav .level4,
+.toc-panel-right .nav ul.nav .level5,
+.toc-panel-right .nav ul.nav .level6, {
+    display: none;           
+}
+/* show active nested list */
+.toc-panel-right .nav>.active>ul.nav>.level4,
+.toc-panel-right .nav>.active>ul.nav>.level5,
+.toc-panel-right .nav>.active>ul.nav>.level6, {
+    display: block;           
+}
+
+.toc-panel-right .panel-body {
+  margin: 0;
+  padding: 2px;
+}
+
+.toc-panel-heading {
+  background: #d8d8d8 !important;
+}
+
+.toc-body-right {
+  background: #f3f3f3;
+}
+
+div.pad #dw__toc {
+  display: none;
+}
+
+#dw__toc-right {
+
+  &.affix                            { z-index: 999; }
+  .toc-title                         { cursor: pointer; margin: 0; }
+  .toc-body-right > ul               { overflow-y: auto !important;}
+
+  .nav > li > a                      { color: #464641; padding: 4px 20px; display: block; word-break: keep-all; }
+  .nav > li > a:hover                { background-color: transparent; color: initial; }
+  .nav > li > a:hover                { border-left: 2px solid #428bca; }
+
+  /*.nav .nav                          { padding-bottom: 10px; }*/
+  .nav .nav .nav > li > a            { padding-top: 2px; padding-bottom: 1px }
+  .nav .nav .nav .nav .nav .nav > .active > a       { font-weight: 500;   }
+
+  /* .nav .nav .nav                    { display: none;  } */
+  .nav > .active > ul                { display: block !important; }
+
+  .nav > li > a                      { padding-left: 20px; }
+  .nav .nav > li > a                 { padding-left: 30px; }
+  .nav .nav .nav > li > a            { padding-left: 40px; }
+  .nav .nav .nav .nav > li > a       { padding-left: 50px; }
+
+
+  .nav > li > a:hover                { padding-left: 19px; }
+  .nav .nav > li > a:hover           { padding-left: 29px; }
+  .nav .nav .nav > li > a:hover      { padding-left: 39px; }
+  .nav .nav .nav .nav > li > a:hover { padding-left: 49px; }
+
+  .nav > .active > a,
+  .nav > .active > a:hover                { padding-left: 18px; }
+
+  .nav .nav > .active > a,
+  .nav .nav > .active > a:hover           { padding-left: 28px; }
+
+  .nav .nav .nav > .active > a,
+  .nav .nav .nav > .active > a:hover      { padding-left: 38px; }
+
+  .nav .nav .nav .nav > .active > a,
+  .nav .nav .nav .nav > .active > a:hover { padding-left: 48px; }
+
+  .nav > .active > a,
+  .nav > .active > a:hover,
+  .nav > .active > a:focus {
+    font-weight: bold;
+    background-color: transparent;
+    border-left: 3px solid #428bca;
+  }
+
+}
+
+
+/*Right side toc media query size adjustments*/
+
+/*Dont affix when the toc is moved into the navbar*/
+nav #dw__toc-right.affix {
+  position: static !important;
+}
+
+@media (min-width:576px) {
+  #dw__toc-right.affix { 
+    position: static !important;
+  }
+}
+
+@media (min-width:768px) {
+  #dw__toc-right.affix {
+    position: fixed !important;
+    width: 140px;
+  }
+}
+
+@media (min-width: 992px) {
+  #dw__toc-right.affix {
+    position: fixed !important;
+    width: 190px;
+  }
+}
+
+@media (min-width: 1200px) {
+  #dw__toc-right.affix {
+    position: fixed !important;
+    width: 280px;
   }
 }
