update contrib hover and tag text size

--- a/css/template.less
+++ b/css/template.less
@@ -859,7 +859,6 @@ svg.icon {
 }
 
 .dw-content-tags {
-  font-size: 90%;
   margin-top: 6rem;
   padding-top: 1.5rem;
   border-top: 1px solid #ddd;
@@ -1001,6 +1000,8 @@ body {
   &:hover {
     cursor: pointer;
     margin-right: -5px;
+    transform: translateY(-3px);
+    box-shadow: 5px 5px 10px #505050;
   }
 }
 
