change default img margins

--- a/css/template.less
+++ b/css/template.less
@@ -642,24 +642,27 @@ ul.btn-group {
   fieldset {
     border: none;
   }
+  a.media {
+    margin-top: 0;
+  }
 
   img.media {
-    margin: .2em 0;
+    margin: 0 .1em .2em .1em;
   }
 
   img.medialeft {
     float: left;
-    margin: .2em 1em .2em 0;
+    margin: 0 1em .2em .1em;
   }
 
   img.mediaright {
     float: right;
-    margin: .2em 0 .2em 1em;
+    margin: 0 .1em .2em 1em;
   }
 
   img.mediacenter {
     display: block;
-    margin: .2em auto;
+    margin: 0 auto .2em auto;
   }
 
   textarea.edit {
