--- a/css/template.less
+++ b/css/template.less
@@ -990,6 +990,9 @@ body {
     flex-direction: column;
     line-height: 1.6;
     font-size: 15px;
+    h1, h2, h3, h4 h5 {
+      overflow-wrap: anywhere;
+    }
 }
 
 
