--- a/css/core/_edit.css
+++ b/css/core/_edit.css
@@ -139,3 +139,8 @@ div.picker button.toolbutton {
     border: solid @ini_background_alt;
     border-width: 0 .5em;
 }
+
+/* modal popup editor */
+.ui-dialog.modal-content.ui-widget.ui-widget-content {
+    top: 0 !important;
+}
