--- a/css/core/_edit.css
+++ b/css/core/_edit.css
@@ -144,3 +144,18 @@ div.picker button.toolbutton {
 .ui-dialog.modal-content.ui-widget.ui-widget-content {
     top: 0 !important;
 }
+
+.mode_preview div.preview {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/*Set preview width same size as it will be displayed with sidebars*/
+@media (min-width: 1200px) {
+    .mode_preview div.preview{
+        width: 66.66666667%;
+        border: 1px solid #eee;
+        border-radius: 4px;
+        padding: 20px;
+    }
+}
