--- a/css/core/_search.less
+++ b/css/core/_search.less
@@ -21,9 +21,13 @@
 ********************************************************************/
 
 /*____________ advanced search form ____________*/
+.dokuwiki .search-results-form fieldset.search-form button[type="submit"]:nth-child(2) {
+    margin-right: 152px;
+}
 .dokuwiki .search-results-form fieldset.search-form {
     width: 100%;
     margin: 1em 0;
+    position: relative;
 
     input[name="q"] {
         width: 50%;
@@ -132,6 +136,7 @@
     dt {
         font-weight: normal;
         margin-bottom: .2em;
+        font-size: large;
     }
 
     /* last modified line */
