--- a/css/core/_search.less
+++ b/css/core/_search.less
@@ -8,7 +8,7 @@
 
 /* search hit in normal text */
 .dokuwiki .search_hit {
-    color: @ini_text;
+    color: #4d5156;
     background-color: __highlight__;
 }
 
@@ -146,7 +146,8 @@
 
     /* search snippet */
     dd.snippet {
-        color: @ini_text_alt;
+        max-width: 600px;
+        color: #4d5156;
         background-color: inherit;
         margin: 0 0 1.2em 0;
 
@@ -207,3 +208,4 @@
     right: -13.5em;
     text-align: right;
 }
+
