--- a/css/plugins/elasticsearch.less
+++ b/css/plugins/elasticsearch.less
@@ -11,3 +11,13 @@
 .dokuwiki .search-results-form fieldset.search-form .advancedOptions div.toggle ul {
 	max-width: 80vw;
 }
+
+.dokuwiki {
+    a.elastic-link {
+        color: #1a0dab;
+    }
+
+    .elastic-datemod {
+        color: #999;
+    }
+}
