fix search styles

--- a/css/core/_search.less
+++ b/css/core/_search.less
@@ -106,6 +106,12 @@
     }
 }
 
+/* ______ headings _________*/
+.dokuwiki div.search_quickresult h2.search-heading,
+.dokuwiki div.search_fulltextresult h2.search-heading {
+    font-size: 14px;
+}
+
 
 /*____________ matching pagenames ____________*/
 
