--- a/css/core/_links.css
+++ b/css/core/_links.css
@@ -38,6 +38,10 @@
     padding: 0 0 0 18px;
     word-wrap: break-word;
 }
+#media__manager a.mediafile {
+    padding: 0 0 0 1.4em;
+}
+
 /* external link */
 .dokuwiki a.urlextern {
     background-image: url(../../images/external-link.png);
