--- a/css/core/_links.css
+++ b/css/core/_links.css
@@ -38,6 +38,9 @@
     padding: 0 0 0 18px;
     word-wrap: break-word;
 }
+.dokuwiki a.interwiki {
+    padding: 0 0 0 20px;
+}
 #media__manager a.mediafile {
     padding: 0 0 0 1.4em;
 }
