--- a/css/plugins/struct.less
+++ b/css/plugins/struct.less
@@ -31,6 +31,11 @@
 
 }
 
+.dokuwiki .structaggregation img.media {
+    box-shadow: inherit;
+}
+
+
 @media (max-width: 480px) {
     .dokuwiki .struct_entry_form span.label {
         text-align: left !important;
