fix mark ready for approval style

--- a/css/plugins/approve.less
+++ b/css/plugins/approve.less
@@ -66,6 +66,16 @@
   }
 }
 
+.plugin__approve_diff {
+  .approve-btn-bs;
+  .approve-btn-bs-primary;
+  float: right;
+  &:hover {
+      text-decoration: none;
+      color: #fff;
+  }
+}
+
 #plugin__approve {
   position: initial;
   text-align: center;
