remove toc at top of page. toc in rightsidebar for new bs template.

--- a/css/template.less
+++ b/css/template.less
@@ -958,6 +958,9 @@ div.dw-content > div.dw__toc {
     aria-expanded: false !important;
     display: none !important;
 }
+#dw__toc {
+    display: none !important;
+}
 div.dw-sidebar-content {
   clear: both;
 }
